@@ -104,13 +104,13 @@ TraceIterator::nextImpl(store::Item_t& result, PlanState& planState) const
     );
   }
 
-  if (state->theSerializer.get() == 0) {
-    state->theSerializer.reset(new serializer(0));
+  if (state->theSerializer == 0)
+  {
+    state->theSerializer = new serializer(0);
+
     Zorba_SerializerOptions options;
     options.omit_xml_declaration = ZORBA_OMIT_XML_DECLARATION_YES;
-    SerializerImpl::setSerializationParameters(
-                        *(state->theSerializer), 
-                        options);
+    SerializerImpl::setSerializationParameters(*(state->theSerializer), options);
   }
   state->theOS = theSctx->get_trace_stream();
 
